BUGFIX: Set a positive z-index for the DropDown contents

--- a/packages/react-ui-components/src/DropDown/style.css
+++ b/packages/react-ui-components/src/DropDown/style.css
@@ -36,6 +36,7 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 1;
     display: none;
     width: 100%;
     padding: 0;
